# MLOps_practice_DAPAD

./: .gitignore  README.md  data_download.py  data_preprocessing.py  pyproject.toml  requirements.txt
augmentations/: .cursorignore  augmentate.py  requrements.txt
augmentations/test_aug/augmented_annotations/: augmented_0001_1__28_04_2025_3-32-29.txt  augmented_0001_3__27_04_2025_23-49-47.txt  augmented_0001_4__28_04_2025_5-37-05.txt  augmented_0001_4__28_04_2025_9-07-02.txt
augmentations/test_aug/labels_test/: 0001_1__28_04_2025_3-32-29.txt  0001_3__27_04_2025_23-49-47.txt  0001_4__28_04_2025_5-37-05.txt  0001_4__28_04_2025_9-07-02.txt
lab1/: model_preparation.py  model_testing.py  pipeline.sh
lab2/: Jenkinsfile  architecture.py  data_creation.py  data_preprocessing.py  dataset.py  fit.py  model_testing.py
lab3/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
lab3/src/core/: __init__.py  settings.py
lab3/src/database/: __init__.py  db.py  tables.py
lab3/src/datapreprocess/: __init__.py  data_creation.py  preprocessing.py
lab3/src/models/: __init__.py  models.py  request.py
lab3/src/routers/: __init__.py  router.py
lab3/src/schemas/: __init__.py  request.py  schemas.py
