[project]
name = "mlops-practice-dapad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "fastai>=2.8.7",
    "kagglehub>=1.0.0",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]
