[project]
name = "lab3"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "greenlet>=3.3.2",
    "kagglehub>=1.0.0",
    "pandas>=3.0.2",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "scikit-learn>=1.8.0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
]
